[package]
name = "fortunes_algorithm"
version = "0.1.0"
authors = ["Daniel Maycock <DanMaycock13@googlemail.com>"]
edition = "2018"

[dependencies]
binary_search_tree = {git = "https://github.com/DanMaycock/binary_search_tree_rs.git"}
rand = "0.6.4"
petgraph = "0.4.13"
priority_queue = {git = "https://github.com/DanMaycock/priority_queue_rs.git"}
slotmap = {version = "0.3.0", features = ["serde"]}

[dev-dependencies]
piston_window = "0.89.0"
