[package]
name = "fortunes_algorithm"
version = "0.1.0"
authors = ["Daniel Maycock <DanMaycock13@googlemail.com>"]
edition = "2018"

[dependencies]
binary_search_tree = {git = "https://github.com/DanMaycock/binary_search_tree_rs.git"}
rand = "0.7.3"
petgraph = "0.5.1"
priority_queue = {git = "https://github.com/DanMaycock/priority_queue_rs.git"}
slotmap = {version = "0.4.0", features = ["serde"]}
cgmath = "0.17.0"
log = "0.4.11"

[dev-dependencies]
piston_window = "0.112.0"
